# shared-folder-hybrid-search

./: .gitignore  Cargo.toml  README.md  deny.toml  osv-scanner.toml
.github/workflows/: dependency-audit.yml
crates/build-index/: Cargo.toml
crates/build-index/src/: main.rs
crates/convert-mediawiki-dump/: Cargo.toml
crates/convert-mediawiki-dump/src/: main.rs
crates/hybrid-shared-core/: Cargo.toml
crates/hybrid-shared-core/src/: chunking.rs  config.rs  embedding.rs  index.rs  lib.rs  protocol.rs  schema.rs  shared_folder.rs  tantivy_index.rs  vector_index.rs
crates/search-client/: Cargo.toml
crates/search-client/src/: main.rs  ui.html
crates/search-server/: Cargo.toml
crates/search-server/src/: main.rs
examples/: build-index.toml  client.toml  server.toml  shared-search.toml
examples/contracts/: input.jsonl  schema.json
scripts/: export_ruri_v3_onnx.ps1  onnx-export-requirements.txt
