[workspace]
members = [
    "crates/hybrid-shared-core",
    "crates/build-index",
    "crates/convert-mediawiki-dump",
    "crates/search-server",
    "crates/search-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tyaso777/shared-folder-hybrid-search"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
notify = "6"
open = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tantivy = "0.25"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "sync"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
hnsw_rs = "0.3"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "load-dynamic"] }
tokenizers = "0.22.1"
ndarray = "0.16"
lindera = { version = "1.4", default-features = false, features = ["embedded-ipadic"] }
lindera-tantivy = { version = "1", default-features = false, features = ["embedded-ipadic"] }
bzip2 = "0.5"
quick-xml = "0.38"
regex = "1"
