[package]
name = "hybrid-shared-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
chrono.workspace = true
hnsw_rs.workspace = true
lindera.workspace = true
lindera-tantivy.workspace = true
ndarray.workspace = true
ort.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tantivy.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
