[package]
name = "search-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
hybrid-shared-core = { path = "../hybrid-shared-core" }
open.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true

