[package]
name = "search-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hybrid-shared-core = { path = "../hybrid-shared-core" }
notify.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
